@startuml

package com.paulobarbosa.foxlibrary.core {
abstract class EntityBase{
- id: int
}

abstract class Person{
- name: string
- info: string
}

abstract class Company{
}

class Idiom{
}

 class Archive{
}

enum Format <<enumeration>>{
}

class Category{
}


}

package com.paulobarbosa.foxlibrary.book {




 class Publisher{
}




 class Book {
 - title: string
 - isbn: string
 - page_number: int
 - description: string
 - size_mb: float
 - publisher_id: int
 - language_id: int
 - picture_id: int
 + void: register()
}

class RelBookFormat{
- book_id: int
- format_id: int
}

class RelBookAuthor{
- book_id: int
- author_id: int
}

class RelBookCategory{
- book_id: int
- category_id: int
}


EntityBase <|-- Person
EntityBase <|-- Company
Company <|-- Publisher
'EntityBase <|-- Archive
'EntityBase <|-- Category
'EntityBase <|-- Idiom

Person <|-- Author : "< inherits "


Book  *--> " 1..1  " Idiom : " has >"
Book  o--> " 0..1  " Publisher : " has >"
Book  o--> " 0..1  " Archive : " has >"

RelBookFormat -down-> "1..*   " Book : " contains >"
RelBookFormat -down-> "1..*   " Format : " contains >"

RelBookAuthor -down-> "1..* " Book : " contains >"
RelBookAuthor -down-> "1..*   " Author : " contains >"

RelBookCategory -down-> "1..*   " Book : " contains >"
RelBookCategory -down-> "1..*   " Category : " contains >"



}



@enduml